# google_sheet_calendar_sync

./: .gitignore  Dockerfile  cron-file  docker-compose-deploy.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  requirements_sync.txt  sync_sheet_to_calendar.py  tasks.py
google_sheet_calendar_sync/: sync_sheet_to_calendar.py
